react-app/src/components/onlinestatus.css
.onlinestatus{
    color: #3ba55d;
    display: flex;
    align-items: center;
    position: absolute
}

.UserListContainer{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;

    margin-top: 48px;
    width: 18%;
    background-color: #2F3136;
}

.userslist{
    color: #96989D;
    display: flex;



    flex-direction: row;
    font-family: Whitney,"Helvetica Neue",Helvetica,Arial,sans-serif;
    padding: 0px 8px;
    height: 38px;
    list-style: none;
    text-align: center;
    margin-bottom: 8px;
    margin-top: 8%;

}


.useravatar{
    height: 32px;
    width: 32px;
    background-color: #5865F2;
    border-radius: 50%;

}

.discordavatar{
    margin-top: 8px;
}
.discordavatar2{
    margin-top: 4px;
    border-radius: 50%;
    margin-right: 50px;
}

.discordavatar3{

    border-radius: 50%;
    margin-right: 50px;
}



.onlinestatusshape{
    position: absolute;

    height: 10px;
    width:10px;
    margin-left: 20px;
    margin-top: -15px;
    border-radius: 50%;
    background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);
}

.onlinestatusshapelogo{
    height: 10px;
    width:10px;
    margin-left: 20px;
    margin-top: -8px;

    border-radius: 50%;
    background-color: hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);
}
.usernametext{
    margin-left: 10px;
    margin-top: 5px;
}

.userlistonline{
    font-size: 12px;
    color: #96989D;
    margin-left: 20px;
    margin-bottom: -10px;
    font-weight: bold;
    font-family: "ABC Ginto Normal","Helvetica Neue",Helvetica,Arial,sans-serif;
}


.userslist2{
    color: #96989D;
    display: flex;
    margin-top: 20px;

    opacity: .5;


    flex-direction: row;
    font-family: Whitney,"Helvetica Neue",Helvetica,Arial,sans-serif;
    padding: 0px 8px;
    height: 25px;
    list-style: none;
    text-align: center;


}

